--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -245,7 +245,7 @@
                 <button type="submit"
                         translate="commons.buttons.validate" ng-disabled="loginForm.$invalid" tabindex="8"
                         ng-class="{'btn waves-effect waves-white disabled': loginForm.$invalid, 
-                                  'btn waves-effect waves-white accent-color': !loginForm.$invalid}">
+                                  'btn waves-effect waves-white secondary-color': !loginForm.$invalid}">
                 </button>
 
             </div>
