--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -15,7 +15,7 @@
         </div>
         
         <div class="col s12 l4">
-            <widget-calendar meta="meta" user="user" ></widget-calendar>
+            <widget-collecte meta="meta" user="user" ></widget-collecte>
         </div>
         
         <div class="col s12 l6">
@@ -23,7 +23,7 @@
         </div>
     
         <div class="col s12 l6">
-            <widget-podium meta="meta" user="user" indicator="playTime" nbitem="10" stataggregat="SUM" ></widget-podium>
+            <widget-podium meta="meta" user="user" indicator="totalPlayTime" nbitem="10" stataggregat="SUM" ></widget-podium>
         </div>
         
     </div>
