--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,6 +1,5 @@
 <div class="aboutUs">
     <div class="container">
-        <h2 class="center-align dark-text-color" translate="about.title"></h2>
         <div class="row primary-text-color">
             <div class="col s12 m4">
                 <div class="card">
@@ -10,8 +9,9 @@
                     <div class="card-content light-primary-color">
                         <span class="card-title activator"><b>{{'about.christophe.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.christophe.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.christophe.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.christophe.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.christophe.title' | translate}}<i class="material-icons right">close</i></span>
@@ -29,11 +29,12 @@
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Pascal.JPG" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
-                         <span class="card-title activator"><b>{{'about.pascal.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                    <div class="card-content light-primary-color">
+                        <span class="card-title activator"><b>{{'about.pascal.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.pascal.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.pascal.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.pascal.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.pascal.title' | translate}}<i class="material-icons right">close</i></span>
@@ -52,11 +53,12 @@
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Xavier.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b>{{'about.xavier.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.xavier.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.xavier.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.xavier.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.xavier.title' | translate}}<i class="material-icons right">close</i></span>
@@ -72,18 +74,23 @@
                         </p>
                     </div>
                 </div>
-
             </div>
+        </div>
+        <div class="row">
+            <h2 class="center-align dark-text-color" translate="about.title"></h2>
+        </div>
+        <div class="row">
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/mathieu.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b>{{'about.mathieu.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.mathieu.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.mathieu.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.mathieu.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.mathieu.title' | translate}}<i class="material-icons right">close</i></span>
@@ -100,11 +107,12 @@
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/florent.jpg" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
-                         <span class="card-title activator"><b>{{'about.florent.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                    <div class="card-content light-primary-color">
+                        <span class="card-title activator"><b>{{'about.florent.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.florent.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.florent.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.florent.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.florent.title' | translate}}<i class="material-icons right">close</i></span>
@@ -121,11 +129,12 @@
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Jerome.JPG" alt="image">
                     </div>
-                    <div class="card-content dark-primary-color">
+                    <div class="card-content light-primary-color">
                         <span class="card-title activator"><b>{{'about.jerome.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.jerome.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.jerome.desc' | translate}}</p>
+                    </div>
+                    <div class="card-content dark-primary-color hide-on-small-only">
+                        <p class="">{{'about.jerome.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title">{{'about.jerome.title' | translate}}<i class="material-icons right">close</i></span>
