--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="col s12 m6 l6" style="margin-top:15px;">
-                    <widget-podium meta="meta" user="user" indicator="playTime" nbitem="3" stataggregat="SUM"></widget-podium>
+                    <widget-podium meta="meta" user="user" indicator="totalPlayTime" nbitem="3" stataggregat="SUM"></widget-podium>
                 </div>
             </v-page>
             
