--- a/src/app/components/directives/widgets/agenda/agenda.html
+++ b/src/app/components/directives/widgets/agenda/agenda.html
@@ -1,25 +1,24 @@
-<div class="card accent-color">
-    <div class="card-content dark-primary-color">
+<div class="card">
+    <div class="card-content accent-color">
         <span class="card-title">
-            <small><i class="fa fa-calendar"></i> &nbsp; {{'mainAgenda.next_event'  | translate}}
+            <small><i class="fa fa-fw fa-calendar"></i> &nbsp; {{'mainAgenda.next_event'  | translate}}
             <a href="#/private/addEvent/{{meta.sandbox.effectiveDefault}}" class="white-text right" ng-if="events.length > 0">
-                <i class="fa fa-plus-square-o"></i>
+                <i class="fa fa-fw fa-plus-square-o"></i>
             </a>
             </small>    
         </span>
     </div>
     <div class="card-content" style="overflow-y: auto; height:255px;" ng-if="events.length > 0">
-        <div ng-repeat="e in events track by $index" class="row">
-            <div class="col s2" style="padding:10px;">
-                <h5 class="center-align">{{e.startDate | date : "dd"}}</h5>
+        <div ng-repeat="e in events track by $index" class="row white primary-text-color">
+            <div class="col s2"><i class="material-icons">{{e.icon}}</i></div>
+            <div class="col s10"><span>{{e.label}}</span></div>
+            <div class="col s2"></div>
+            <div class="col s10 ">
+                <span>{{e.participants.teamHome.label}} VS {{e.participants.teamVisitor.label}}</span>
                 <hr/>
-                <h6 class="center-align">{{e.startDate | date : 'MM'}}</h6>
-            </div>
-            <div class="col s10" style="padding:10px;">
-                <h6>{{e.label}} <small>{{e.title | translate}}</small></h6>
-                {{e.participants.teamHome.label}} / {{e.participants.teamVisitor.label}}
             </div>
         </div>
+        
     </div>
     
     <div class="card-content white" style="overflow-y: auto; height:255px;" ng-if="events.length === 0">
