--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -6,7 +6,7 @@
             <i class="material-icons right">more_vert</i>
         </span>
 
-        <span class="activator card-title" ng-if="indicator==='playTime'">
+        <span class="activator card-title" ng-if="indicator==='totalPlayTime'">
             <i class="fa fa-clock-o left"></i>
             <small translate="dashboard.widgetTopUsed.title"></small>
             <i class="material-icons right">more_vert</i>
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div style="padding:10px;" ng-if="!loading" ng-if="noStat">
+        <div style="padding:10px;" ng-if="noStat">
             <div class="row center-align">
                 <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
                                            background-repeat:no-repeat; 
@@ -42,7 +42,7 @@
                     <br> {{players[0].firstname}}
                     <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
-                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='totalPlayTime'">{{players[0].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
                 </div>
                 <div class="col s4" style="background-image:url(/assets/images/trophy2.png); 
@@ -55,7 +55,7 @@
                     <br> {{players[1].firstname}}
                     <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
-                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='totalPlayTime'">{{players[1].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
                 </div>
 
@@ -69,7 +69,7 @@
                     <br> {{players[2].firstname}}
                     <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
-                    <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
+                    <h4 class="white-text" ng-if="indicator==='totalPlayTime'">{{players[2].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <i class="material-icons right">close</i>
         </span>
 
-        <span class="card-title" ng-if="indicator==='playTime'"> 
+        <span class="card-title" ng-if="indicator==='totalPlayTime'"> 
             <i class="fa fa-clock-o left"></i>
             {{'dashboard.widgetTopUsed.title' | translate}} 
             <i class="material-icons right">close</i>
@@ -96,7 +96,7 @@
                 <td ng-bind="$index"></td>
                 <td><b>{{player.firstname}} {{player.name}}</b></td>
                 <td class="center-align" ng-bind="player.value" ng-if="indicator==='goalScored'"></td>
-                <td class="center-align" ng-if="indicator==='playTime'">{{player.value/60 | number : 0}} '</td>
+                <td class="center-align" ng-if="indicator==='totalPlayTime'">{{player.value/60 | number : 0}} '</td>
             </tr>
             </tbody>
         </table>
