--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="col s12 m6 l6" style="margin-top:15px;">
-                    <widget-podium meta="meta" user="user" indicator="playTime" nbitem="10"
+                    <widget-podium meta="meta" user="user" indicator="totalPlayTime" nbitem="10"
                                    stataggregat="SUM"></widget-podium>
                 </div>
 
