--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -16,7 +16,7 @@
                 <div class="col s12 center-align" ng-if="teamHome">
                     <h5> 
                         <span ng-if="teamHome">
-                            <a href="#/private/teamStats/{{collecte.event.participants.teamHome.id}}"
+                            <a href="#/private/viewTeam/{{collecte.event.participants.teamHome.id}}/false"
                                class="accent-color btn">{{collecte.event.participants.teamHome.label}}
                             </a>
                         </span>
@@ -30,7 +30,7 @@
                     {{collecte.event.participants.teamHome.label}}
                     -
                     <span ng-if="teamVisitor">
-                            <a href="#/private/teamStats/{{collecte.event.participants.teamVisitor.id}}"
+                            <a href="#/private/viewTeam/{{collecte.event.participants.teamVisitor.id}}/false"
                                class="accent-color btn">{{collecte.event.participants.teamVisitor.label}}
                             </a>
                         </span>
