--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -64,7 +64,8 @@
                            translate="navbar.signup"></a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" class="white-text" translate="navbar.connect"></a>
+                        <a href="javascript:void(0)" class="white-text" translate="navbar.connect"
+                           ng-click="openLogin()" data-target="modalLogin"></a>
                     </li>
                     <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"
                            rel="noopener"><img src="assets/images/Twitter.png" class="social-icon no-margin" alt="icon">
