Amélioration widget et bug podium

--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -58,7 +58,7 @@
                                 </span>
                             </div>
                             <div class="card-action">
-                                <a href="#/private/teamStats/{{team._id}}" class="waves-effect accent-text-color"><i
+                                <a href="#/private/viewTeam/{{team._id}}/false" class="waves-effect accent-text-color"><i
                                         class="fa fa-bar-chart"></i></a>
                                 <div class="right">
                                     <input type="checkbox" ng-model="compareList[team._id]" name="compare"
@@ -76,7 +76,7 @@
                                 </span>
                             </div>
                             <div class="card-action">
-                                <a href="#/private/teamStats/{{team._id}}" class="waves-effect accent-text-color"><i
+                                <a href="#/private/viewTeam/{{team._id}}/false" class="waves-effect accent-text-color"><i
                                         class="fa fa-bar-chart"></i></a>
                                 
                                 <div class="right">
