Bugs Stats + Efficacité gardien

--- a/src/app/components/directives/sandbox/teamStats/teamStats.html
+++ b/src/app/components/directives/sandbox/teamStats/teamStats.html
@@ -55,6 +55,34 @@
                                       widget-title="'stats.efficiency.efficiency7m'"></widget-efficiency-player>
         </div>
     </div>
+    
+    <div class="row">
+        <div class="col s12 left-align grey-text text-ligthen-2">
+            <h5>
+                <small translate="stats.efficiency.efficiencyGoalkeeper"></small>
+                <h6 class ="primary-text-color" translate="stats.efficiency.efficiencyGoalkeeperDesc"></h6>
+            </h5>
+        </div>
+        <div class="col s12 m6 l3" style="margin-top:15px;">
+            <widget-efficiency-goalkeeper meta="meta" user="user"></widget-efficiency-goalkeeper>
+        </div>
+
+        <div class="col s12 m6 l3" style="margin-top:15px;">
+            <widget-efficiency-goalkeeper meta="meta" user="user" values="['BACKLEFT9', 'CENTER9', 'BACKRIGHT9']"
+                                      widget-title="'stats.efficiency.efficiency9m'"></widget-efficiency-goalkeeper>
+        </div>
+
+        <div class="col s12 m6 l3" style="margin-top:15px;">
+            <widget-efficiency-goalkeeper meta="meta" user="user"
+                                      values="['BACKLEFT6', 'CENTER6', 'BACKRIGHT6', 'LWING', 'RWING']"
+                                      widget-title="'stats.efficiency.efficiency6m'"></widget-efficiency-goalkeeper>
+        </div>
+
+        <div class="col s12 m6 l3" style="margin-top:15px;">
+            <widget-efficiency-goalkeeper meta="meta" user="user" values="['PENALTY']"
+                                      widget-title="'stats.efficiency.efficiency7m'"></widget-efficiency-goalkeeper>
+        </div>
+    </div>
     <!-- Stats shoot efficiency end -->
 
     <!-- Stats actions pos/neg Start -->
