--- a/src/app/components/directives/stats/hand/shoots/efficiencyGoalkeeper.html
+++ b/src/app/components/directives/stats/hand/shoots/efficiencyGoalkeeper.html
@@ -24,7 +24,7 @@
                 <h2 class="">{{efficiency | number : 0}}
                     <small>%</small>
                 </h2>
-                <h5 class="right-align">{{nbGoal}} <small>buts</small> / {{nbShoot}} <small>tirs</small></h5>
+                <h5 class="right-align">{{nbGoal}} <small>arrêts</small> / {{nbShoot}} <small>tirs</small></h5>
             </div>
             <div class="center-align" ng-if="!noStat" translate="stats.resumeTab.noData"></div>
         </div>
