--- a/src/app/components/directives/sandbox/playerStats/playerStats.html
+++ b/src/app/components/directives/sandbox/playerStats/playerStats.html
@@ -32,13 +32,13 @@
 
 
 <!-- Stats shoot efficiency Start -->
-<div class="row">
+<div class="row" ng-if="player.status.positionType!=='goalkeeper'">
     <div class="col s12 left-align grey-text text-ligthen-2">
         <h5>
             <small translate="stats.efficiency.efficiency"></small>
         </h5>
     </div>
-
+    
     <div class="col s12 m6 l3" style="margin-top:15px;">
         <widget-efficiency-player meta="meta" user="user"></widget-efficiency-player>
     </div>
@@ -58,33 +58,36 @@
         <widget-efficiency-player meta="meta" user="user" values="['PENALTY']"
                                   widget-title="'stats.efficiency.efficiency7m'"></widget-efficiency-player>
     </div>
-
-    <!--
-    <div class="col l3 m6 s12">
-        <stats-efficiency bindtoid="gaugeEfficiencyGlobal"
-                          label="efficiencyTotal" padding="25" noStatEff="noStatEff">
-        </stats-efficiency>
-    </div>
-
-    <div class="col l3 m6 s12">
-        <stats-efficiency bindtoid="gaugeEfficiency9m"
-                          label="efficiency9m" values="'values9m'" padding="25">
-        </stats-efficiency>
-    </div>
-
-    <div class="col l3 m6 s12">
-        <stats-efficiency bindtoid="gaugeEfficiency6m"
-                          label="efficiency6m" values="'values6m'" padding="25">
-        </stats-efficiency>
-    </div>
-
-    <div class="col l3 m6 s12">
-        <stats-efficiency bindtoid="gaugeEfficiency7m"
-                          label="efficiency7m" values="'values7m'" padding="25">
-        </stats-efficiency>
-    </div>
-    -->
 </div>
+
+<div class="row" ng-if="player.status.positionType==='goalkeeper'">
+    <div class="col s12 left-align grey-text text-ligthen-2">
+        <h5>
+            <small translate="stats.efficiency.efficiencyGoalkeeper"></small>
+            <h6 class ="primary-text-color" translate="stats.efficiency.efficiencyGoalkeeperDesc"></h6>
+        </h5>
+    </div>
+    <div class="col s12 m6 l3" style="margin-top:15px;">
+        <widget-efficiency-goalkeeper meta="meta" user="user"></widget-efficiency-goalkeeper>
+    </div>
+
+    <div class="col s12 m6 l3" style="margin-top:15px;">
+        <widget-efficiency-goalkeeper meta="meta" user="user" values="['BACKLEFT9', 'CENTER9', 'BACKRIGHT9']"
+                                  widget-title="'stats.efficiency.efficiency9m'"></widget-efficiency-goalkeeper>
+    </div>
+
+    <div class="col s12 m6 l3" style="margin-top:15px;">
+        <widget-efficiency-goalkeeper meta="meta" user="user"
+                                  values="['BACKLEFT6', 'CENTER6', 'BACKRIGHT6', 'LWING', 'RWING']"
+                                  widget-title="'stats.efficiency.efficiency6m'"></widget-efficiency-goalkeeper>
+    </div>
+
+    <div class="col s12 m6 l3" style="margin-top:15px;">
+        <widget-efficiency-goalkeeper meta="meta" user="user" values="['PENALTY']"
+                                  widget-title="'stats.efficiency.efficiency7m'"></widget-efficiency-goalkeeper>
+    </div>
+</div>
+   
 <!-- Stats shoot efficiency end -->
 <div class="row">
     <div class="col s12 left-align grey-text text-ligthen-2">
